--- a/index.html
+++ b/index.html
@@ -3,13 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Série de Enola Holmes</title>
+    <title>Filme Enola Holmes 2</title>
 </head>
 <body>
     <head>mariaflix</head>
     <h1>Enola Holmes 2 | Trailer oficial: Parte 1 | Netflix</h1>
-  <p>#Enola Holmes</p>  
+  <p>#Enola Holmes </p>  
   <iframe width="560" height="315" src="https://www.youtube.com/embed/tFz3OGehj0U?si=hvntnfEG8DUU3aSc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </body>
 </html>
+
+</div>
+</div>
+</section1>
+<section2>
+  <h2>filmes e série</h2> 
+  <div class="categoria-vídeos"> 
+    <a href"<iframe width="560" height="315" src="https://www.youtube.com/embed/tFz3OGehj0U?si=oKdJvk92yJcEP1iA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <img src="https://youtu.be/tFz3OGehj0U?si=REMgpptOJ_wnU0Yo"
+    </a>
+    <a href="<iframe width="560" height="315" src="https://www.youtube.com/embed/tFz3OGehj0U?si=vet9bgO3bMljD8pz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
+      <img src="https://youtu.be/tFz3OGehj0U?si=A7488i6wu328Tizr"
+    </a>
+    </div>
+    </section2>
+  </body>
+</hatml>
